lab5/out
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c 3ac.cpp
3ac.cpp: In function ‘ac3* p_polymorphic(astree*, symbol_table*)’:
3ac.cpp:375:3: error: ‘errprint’ was not declared in this scope
   errprint("p_polymorphic called on expr with size 0");
   ^~~~~~~~
3ac.cpp:375:3: note: suggested alternative: ‘errprintf’
   errprint("p_polymorphic called on expr with size 0");
   ^~~~~~~~
   errprintf
3ac.cpp:376:3: error: ‘ac’ was not declared in this scope
   ac->itype.set(static_cast<int>(instruction::ASSIGNMENT));
   ^~
3ac.cpp:376:3: note: suggested alternative: ‘ac3’
   ac->itype.set(static_cast<int>(instruction::ASSIGNMENT));
   ^~
   ac3
Makefile:55: recipe for target '3ac.o' failed
make: *** [3ac.o] Error 1
